--- a/03-JavaScript/01-变量.md
+++ b/03-JavaScript/01-变量.md
@@ -1,3 +1,4 @@
+```javascript
 ## 字面量：数字和字符串
 
 “字面量”即**常量**，是固定值，不可改变。看见什么，它就是什么。
@@ -12,27 +13,27 @@
 
 （1）数值的字面量非常简单，写上去就行了，不需要任何的符号。例如：
 
-```javascript
+​```javascript
 	alert(886);  //886是数字，所以不需要加引号。
-```
+​```
 
 （2）字符串的字面量也很简单，但一定要加上引号。可以是单词、句子等。例如：
 
-```javascript
+​```javascript
 	console.log('886');
 
 	console.log('不会炒菜的瞎子不是一个合格的乞丐，哑巴说的');
-```
+​```
 
 温馨提示：100是数字，"100"是字符串。
 
 （3）布尔字面量举例：
 
-```javascript
+​```javascript
 if (true) {
 	console.log('如果为真，就走这里面的代码');
 }
-```
+​```
 
 ### 总结
 
@@ -58,9 +59,9 @@ if (true) {
 
 在ES6语法之前，统一使用`var`关键字来声明一个变量。比如：
 
-```javascript
+​```javascript
 var name; // 生命一个名为 name 的变量
-```
+​```
 
 补充：在ES6语法及之后，统一使用 `const`、`let`关键字来声明一个变量。这个以后再讲。
 
@@ -68,20 +69,29 @@ var name; // 生命一个名为 name 的变量
 
 变量的赋值：
 
-```javascript
+​```javascript
 name= '刘德华'
-```
+​```
 
 变量的声明和赋值，举例如下：
 
-```javascript
-var a = 100; // ES5语法
+​```javascript
+var a = 100; 		// ES5语法
 
-const b = hello; // ES6 语法
-let b = world; // ES6 语法
-```
+const b = hello; 	// ES6 语法
+let b = world; 		// ES6 语法
+​```
 
-​			// 记得加空格  末尾记得加     ;
+运算大于赋值：
+
+​```javascript
+var c;			// 声明一个变量
+var a = 1,
+	b = 2;
+ c = a + b;		// 如果你的想法是把 a直接赋值给c是不可能的，电脑会执行：运算 a + b 		
+​```
+
+			// 记得加空格  末尾记得加     ;
 
 var是英语“variant”变量的缩写。后面要加一个空格，空格后面的东西就是“变量名”：
 
@@ -97,10 +107,10 @@ PS：**在JavaScript中，永远都是用var来定义变量**（在ES6 之前）
 
 有经验的程序员，会把声明和赋值写在一起：
 
-```javascript
-	var a = 100;    //声明，并且赋值100
-	console.log(a);  //输出100
-```
+​```javascript
+	var a = 100;    	//声明，并且赋值100
+	console.log(a); 	//输出100
+​```
 
 声明一个变量并赋值， 我们称之为**变量的初始化**。
 
@@ -112,12 +122,12 @@ PS：**在JavaScript中，永远都是用var来定义变量**（在ES6 之前）
 
 举例：
 
-```javascript
+​```javascript
 var a = 100;
 a = 110;
 
 console.log(a); // 打印结果：110。因为 110 覆盖了 100
-```
+​```
 
 
 ### 同时声明多个变量
@@ -126,55 +136,67 @@ console.log(a); // 打印结果：110。因为 110 覆盖了 100
 
 举例：
 
-```javascript
-var name = '刘德华', age = 27, number = 100;
-```
+​```javascript
+var name = '刘德华', age = 27, number = 100; 		// 这种连着写 开发人员看着麻烦
+​```
+
+​```javascript
+var a = 1;				var a = 1,       // 标准开发  
+var b = 2;					b = 2,		 // 减少冗余
+var c = 3;		===>>>		c = 3,
+var d = 4;					d = 4,
+var e = 5;					e = 5;
+​```
 
 ### 变量声明的几种特殊情况
 
 变量建议先声明，再使用。否则可能会报错。具体如下。
 
+**变量的赋值是从 右 到 左**
+
 **写法1**、先声明，再赋值：（正常）
 
-```javascript
+​```javascript
 var a;
 a = 100;
 console.log(a); // 打印结果：100
-```
+​```
 
 **写法2**、不声明，只赋值：（正常）
 
-```javascript
+​```javascript
 a = 100;
 console.log(a); // 打印结果：100
-```
+​```
 
 **写法3**、只声明，不赋值：（注意，打印 undefined）
 
-```javascript
+​```javascript
 var a;
 console.log(a); // 打印结果：undefined
-```
+​```
 
 **写法4**、不声明，不赋值，直接使用：（会报错）
 
-```javascript
+​```javascript
 console.log(a); // 会报错
-```
+​```
 
-​         控制台会报错
+         控制台会报错
 
 **补充**：写法1和写法2虽然都正常，但这两种写法是有区别的，等以后学习了「变量提升」的概念就明白了。大多数情况下，我们都是采用的写法1。
 
 ## 变量的命名规范
 
+>  我会单独写一篇  Js 的命名规范
+
 
 大写字母是可以使用的，并且大小写敏感。也就是说A和a是两个变量。
 
-```javascript
+​```javascript
 	var A = 250;    //变量1
 	var a = 888;    //变量2
-```
+​```
 
 我们来整理一下**变量的命名规范**：
 
@@ -212,7 +234,7 @@ console.log(a); // 会报错
 
 JS 中的关键字如下：
 
-```
+​```javascript
 break、continue、case、default、
 
 if、else、switch、for、in、do、while、
@@ -224,7 +246,7 @@ var、void、function、return、new、
 this、typeof、instanceof、delete、with、
 
 true、false、null、undefined
-```
+​```
 
 ### 保留字
 
@@ -233,7 +255,7 @@ true、false、null、undefined
 
 JS 中的保留字如下：
 
-```
+​```
 abstract、boolean、byte、char、class、const、
 
 debugger、double、enum、export、extends、final、float、goto
@@ -243,17 +265,24 @@ implements、import、int、interface、long、native、package、
 private、protected、public、short、static、super、synchronized、throws、
 
 transient、volatile
-```
+​```
 
+<br>
 
+## 引入思想
 
-## 举例
+1. 变量是如何存储的  删除它又会怎么样？ 它该何去何从？
+2. 变量有哪些类型？就像生活中的物品一样 有哪些类型？
+
+<br>
+
+## 练习
 
 **举例1**：交换两个变量的值
 
 代码实现：
 
-```javascript
+​```javascript
 var a1 = 100;   // 左手苹果
 var a2 = 200;	// 右手苹果
 
@@ -262,4 +291,5 @@ var temp;    // 就像：你双手拿着苹果 你想要交换手上苹果的位
 temp = a1;    // 把”苹果“放在”桌子上“
 a1 = a2;		// 把左手苹果放在右手上
 a2 = temp;		// 拿起桌子上的苹果
+​```xxxxxxxxxx var a1 = 100;   // 左手苹果var a2 = 200;   // 右手苹果var temp;    // 就像：你双手拿着苹果 你想要交换手上苹果的位置  你就会把一个苹果放在桌子上temp = a1;    // 把”苹果“放在”桌子上“a1 = a2;        // 把左手苹果放在右手上a2 = temp;      // 拿起桌子上的苹果javascript
 ```
