--- a/03-JavaScript/01-变量.md
+++ b/03-JavaScript/01-变量.md
@@ -60,7 +60,7 @@ if (true) {
 在ES6语法之前，统一使用`var`关键字来声明一个变量。比如：
 
 ​```javascript
-var name; // 生命一个名为 name 的变量
+var name; // 声明一个名为 name 的变量
 ​```
 
 补充：在ES6语法及之后，统一使用 `const`、`let`关键字来声明一个变量。这个以后再讲。
