--- a/03-JavaScript/04-运算符.md
+++ b/03-JavaScript/04-运算符.md
@@ -1,16 +1,8 @@
 ## 运算符的定义和分类
 
-> 面试题： var one;
->
-> ​				var two = num ;
->
-> ​				console.log(one == two,one === two) ;
->
-> 答：		（true,false）			// 原因是 == 和 === 的区别  == 会隐式的转换   带着问题看本文
-
 ### 运算符的定义
 
-**运算符**：也叫操作符，是一种符号。通过运算符可以对一个或多个值进行运算，并获取运算结果。
+**运算符**：也叫操作符，是一种符号。通过运算符可以对一个或多个值进行运算，并获取运算结果。（参与计算的符号）
 
 **表达式**：由数字、运算符、变量的组合（组成的式子）。
 
@@ -18,7 +10,7 @@
 
 比如：`+`、`*`、`/`、`(` 都是**运算符**，而`（3+5）/2`则是**表达式**。
 
-比如：typeof 就是运算符，可以来获得一个值的类型。它会将该值的类型以**字符串**的形式返回，返回值可以是 number string boolean undefined object。
+比如：typeof 就是运算符，可以来获得一个值的类型。它会将该值的类型以**字符串**的形式返回，返回值可以是 number string boolean undefined object function。
 
 
 ### 运算符的分类
