--- a/03-JavaScript/04-运算符.md
+++ b/03-JavaScript/04-运算符.md
@@ -2,7 +2,7 @@
 
 ### 运算符的定义
 
-**运算符**：也叫操作符，是一种符号。通过运算符可以对一个或多个值进行运算，并获取运算结果。（参与计算的符号）
+**运算符**：也叫操作符，是一种符号。通过运算符可以对一个或多个值进行运算，并获取运算结果。(参于计算的符号)
 
 **表达式**：由数字、运算符、变量的组合（组成的式子）。
 
@@ -10,7 +10,7 @@
 
 比如：`+`、`*`、`/`、`(` 都是**运算符**，而`（3+5）/2`则是**表达式**。
 
-比如：typeof 就是运算符，可以来获得一个值的类型。它会将该值的类型以**字符串**的形式返回，返回值可以是 number string boolean undefined object function。
+比如：typeof 就是运算符，可以来获得一个值的类型。它会将该值的类型以**字符串**的形式返回，返回值可以是 number string boolean undefined object。
 
 
 ### 运算符的分类
@@ -27,7 +27,7 @@ JS 中的运算符，分类如下：
 
 - 赋值运算符
 
-- 比较运算符   
+- 比较运算符
 
 - 三元运算符（条件运算符）
 
@@ -304,7 +304,7 @@ if (result.resultCode == 0) {
 }
 ```
 
-上方代码的意思是，获取返回结果中的`result.data.imgUrl`这个图片资源；如果返回结果中没有 `result.data.imgUrl` 这个字段，就用 `http://baidu.com/timg.jpg` 作为**兜底**图片。这种写法，在实际开发中经常用到。
+上方代码的意思是，获取返回结果中的`result.data.imgUrl`这个图片资源；如果返回结果中没有 `result.data.imgUrl` 这个字段，就用 `http://baidu.com/timg` 作为**兜底**图片。这种写法，在实际开发中经常用到。
 
 ## 赋值运算符
 
@@ -408,6 +408,7 @@ console.log(null == 0);   // 打印结果：false
 
 ```javascript
 console.log(undefined == null);  //打印结果：true。
+null 不管是 > < ==  0 ,都会得false ，undefined 和它一样
 ```
 
 （4）NaN不和任何值相等，包括他本身。
@@ -420,6 +421,8 @@ console.log(NaN === NaN); //false
 问题：那如果我想判断  b的值是否为NaN，该怎么办呢？
 
 答案：可以通过isNaN()函数来判断一个值是否是NaN。举例：
+
+原理：他会隐式转换 Number(b) 进行判断
 
 ```javascript
 console.log(isNaN(b));
@@ -456,8 +459,10 @@ console.log(isNaN(b));
 
 语法：
 
-```
+```JavaScript
 条件表达式 ? 语句1 : 语句2;
+var max = a ;
+max = max > b ? (max > c ? max :c) : (b > c ? b : c)		// 嵌套
 ```
 
 **执行的流程**：
