--- a/00-电脑技巧/00-删除启动项冗余.md
+++ b/00-电脑技巧/00-删除启动项冗余.md
@@ -1,7 +1,7 @@
 # 删除注册表
 
 ### 因为莫名的删除软件 （流氓软件）会遗留注册表文件 
-每次自启动里面会有软件，但是无法找到根文件
+每次自启动(限制开机启动时间)里面会有软件，但是无法找到根文件
 - 在win里面打开注册表编辑器；
 -  定位到：“HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Run；
 
